# qqbot

./: .env.prod876210974  .gitignore  Dockerfile  README.md  bot.py  deployment.yaml  docker-compose.yml  install-binary.sh  k8s.pdt.yaml  liveness-probe.sh  pyproject.toml  start.sh
2975265878/: .env.prod2975265878  device.json  notices.json
remind/plugins/: remind.py
src/plugins/: remind.py
src/plugins/arena_sub/: __init__.py  binds.json  queryapi.py
src/plugins/arena_where/: __init__.py
src/plugins/issue/: __init__.py
src/plugins/laopo/: __init__.py  random_config_index.py  readme.md  wife_config.py
src/plugins/music/: __init__.py  search_migu_music.py  search_netease_cloud_music.py  search_qq_music.py
src/plugins/notice/: __init__.py  notices.json  notices.py
utils/: asyncio_handle.py  bot_io.py  nonebot_uils.py  queryapi.py  scheduler.py  vip.py
utils/aiorequests/: typing.py
