[tool.poetry]
name = "src"
version = "0.1.0"
description = "src"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
nonebot2 = "^2.0.0a8"
nb-cli = "^0.1.0"
redis = "^3.5.3"
apscheduler = "^3.6.3"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
nonebot-test = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
